Fixing spacing and hiding previous/next text
When the pagination is on it's first or last page there is no reason why we should display previous/next text. You can't click on so it doesn't have any function.

--- a/app/assets/stylesheets/local/pagination.scss
+++ b/app/assets/stylesheets/local/pagination.scss
@@ -52,26 +52,26 @@
   }
   a {
     text-decoration: none;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 6px;
+    margin-right: 6px;
   }
   span.next_page {
-    margin-left: 10px;
+    display: none;
   }
   a.next_page {
     text-decoration: none;
-    margin-left: 10px;
+    margin-left: 6px;
 
     &::after {
       @include pseuds('right');
     }
   }
   span.previous_page {
-    margin-right: 10px;
+    display: none;
   }
   a.previous_page {
     text-decoration: none;
-    margin-right: 10px;
+    margin-right: 6px;
 
     &::before {
       @include pseuds('left');
@@ -80,6 +80,8 @@
   em.current {
     font-style: normal;
     font-weight: bold;
+    margin-left: 6px;
+    margin-right: 6px;
   }
 
   .pages {
